# CLI_Minesweeper

./: CMakeLists.txt  main.cpp
include/: game.h  ui.h
src/: game.cpp  main.cpp  ui.cpp
